--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giallo Booleano</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body class="debug">
     <!-- header -->
-     <header></header>
+     <header>
+        <div>
+            <h1>GIALLO BOOLEANO</h1>
+        </div>
+     </header>
     <!-- main -->
-    <main></main>    
+    <main>
+        <div class="container">
+            <div class="row">
+                <div>
+                    <div class="col-6">Lorem, ipsum dolor.</div>
+                    <div class="col-6">Lorem, ipsum dolor.</div>
+                </div>
+                <div class="col-12"><a href="https://www.youtube.com/watch?v=JVT900H6s0g"></a></div>
+            </div>
+        </div>
+    </main>    
     <!-- footer -->
      <footer></footer>
 </body>
