--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
     <main>
         <div class="container">
             <div class="row">
-                <div>
-                    <div class="col-6">Lorem, ipsum dolor.</div>
-                    <div class="col-6">Lorem, ipsum dolor.</div>
-                </div>
-                <div class="col-12"><a href="https://www.youtube.com/watch?v=JVT900H6s0g"></a></div>
+                <h6 class="py-05">DOLCI E DESSERTS</h6>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                    <div class="col-6">Tiramisu'</div>
+                    <div class="col-6">4.6/5 <span class="btn">RATE</span></div>
+            </div>
+        </div>
+        <div class="col-12"><a href="https://www.youtube.com/watch?v=JVT900H6s0g"></a></div>
     </main>    
     <!-- footer -->
      <footer></footer>
