--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body class="debug">
@@ -17,19 +18,31 @@
         </div>
      </header>
     <!-- main -->
-    <main>
+    <main class="font-style">
         <div class="container">
             <div class="row">
-                <h6 class="py-05">DOLCI E DESSERTS</h6>
+                <h6 class="py-1">DOLCI E DESSERTS</h6>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                    <div class="col-6">Tiramisu'</div>
-                    <div class="col-6">4.6/5 <span class="btn">RATE</span></div>
+                    <div class="col-6 pb-1">Tiramisu'</div>
+                    <div class="col-6 font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn" href="">RATE</a></div>
+                    <div class="col-12"><video src="https://www.youtube.com/watch?v=JVT900H6s0g"></video></div>
+                    <div class="col-12 pl-1">
+                        <h6>In breve</h6>
+                        <ul>
+                            <li>Difficolta': <Strong>Facile</Strong></li>
+                            <li>Tempo: <strong>40 min</strong></li>
+                            <li>Porzione per: <strong>8 persone</strong></li>
+                            <li>Costo: <strong>contenuto</strong></li>
+                            <li><strong>Note</strong></li>
+                        </ul>
+                        
+                    </div>
             </div>
         </div>
-        <div class="col-12"><a href="https://www.youtube.com/watch?v=JVT900H6s0g"></a></div>
+        
     </main>    
     <!-- footer -->
      <footer></footer>
