--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,44 +8,59 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body class="debug">
     <!-- header -->
-     <header>
+    <header>
         <div>
             <h1>GIALLO BOOLEANO</h1>
         </div>
-     </header>
+    </header>
     <!-- main -->
     <main class="font-style">
         <div class="container">
             <div class="row">
-                <h6 class="py-1">DOLCI E DESSERTS</h6>
+                <h6 class="py-1 font-s1">DOLCI E DESSERTS</h6>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                    <div class="col-6 pb-1">Tiramisu'</div>
-                    <div class="col-6 font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn" href="">RATE</a></div>
-                    <div class="col-12"><video src="https://www.youtube.com/watch?v=JVT900H6s0g"></video></div>
-                    <div class="col-12 pl-1">
-                        <h6>In breve</h6>
-                        <ul>
+                <div class="col-6 pb-1">Tiramisu'</div>
+                <div class="col-6 font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
+                        href="">RATE</a></div>
+                <div class="col-12"><iframe width="320" height="150"
+                        src="https://www.youtube.com/watch?v=JVT900H6s0g"></iframe></div>
+                <!-- Ricetta -->
+                <div class="col-12 pl-1">
+                    <div class="card pl-1">
+                        <h4 class="py-1">In breve</h4>
+                        <ul class="list-unstylied font-s2">
                             <li>Difficolta': <Strong>Facile</Strong></li>
                             <li>Tempo: <strong>40 min</strong></li>
                             <li>Porzione per: <strong>8 persone</strong></li>
                             <li>Costo: <strong>contenuto</strong></li>
-                            <li><strong>Note</strong></li>
+                            <li class="pb-2"><strong>Note:</strong> +2 ore di riposo in frigo</li>
                         </ul>
-                        
                     </div>
+                </div>
+                <div class="list-unstylied d-flex space-evenly col-12 py-1">
+                    <div><i class="fa-brands fa-facebook"></i></div>
+                    <div><i class="fa-brands fa-twitter"></i></div>
+                    <div><i class="fa-brands fa-instagram"></i></div>
+                    <div><i class="fa-brands fa-spotify"></i></div>
+                    <div><i class="fa-brands fa-youtube"></i></div>
+                </div>
             </div>
         </div>
-        
-    </main>    
+
+    </main>
     <!-- footer -->
-     <footer></footer>
+    <footer></footer>
 </body>
+
 </html>
