--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 
-<body class="debug">
+<body class="">
     <!-- header -->
     <header>
         <div>
@@ -33,28 +33,37 @@
                 <div class="col-6 pb-1">Tiramisu'</div>
                 <div class="col-6 font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
                         href="">RATE</a></div>
-                <div class="col-12"><iframe width="320" height="150"
+                <div class="col-12"><iframe width="100%" height="150"
                         src="https://www.youtube.com/watch?v=JVT900H6s0g"></iframe></div>
                 <!-- Ricetta -->
-                <div class="col-12 pl-1">
-                    <div class="card pl-1">
-                        <h4 class="py-1">In breve</h4>
-                        <ul class="list-unstylied font-s2">
-                            <li>Difficolta': <Strong>Facile</Strong></li>
-                            <li>Tempo: <strong>40 min</strong></li>
-                            <li>Porzione per: <strong>8 persone</strong></li>
-                            <li>Costo: <strong>contenuto</strong></li>
-                            <li class="pb-2"><strong>Note:</strong> +2 ore di riposo in frigo</li>
-                        </ul>
+                <div class="card col-12 pl-1">
+                    <h4 class="py-1">In breve</h4>
+                    <ul class="list-unstylied font-s2">
+                        <li>Difficolta': <Strong>Facile</Strong></li>
+                        <li>Tempo: <strong>40 min</strong></li>
+                        <li>Porzione per: <strong>8 persone</strong></li>
+                        <li>Costo: <strong>contenuto</strong></li>
+                        <li class="pb-2"><strong>Note:</strong> +2 ore di riposo in frigo</li>
+                    </ul>
+                </div>
+                <div class="list-unstylied d-flex space-evenly col-12 py-1 pb-2">
+                    <div><a href=""><i class="fa-brands fa-facebook btn-social"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-twitter btn-social"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-instagram btn-social"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-spotify btn-social"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-youtube btn-social"></i></a></div>
+                </div>
+                <div class="col-12">
+                    <img class="d-none" src="./assets/img/banner.png" alt="">
+                </div>
+                <h2 class="pb-2">PRESENTATION</h2>
+                <div class="col-12 d-flex">
+                    <div class="col-2 border-top"></div>
+                    <div class="col-10">
+                        <img class="img py-2" src="./assets/img/tiramisu.jpg" alt="">
                     </div>
                 </div>
-                <div class="list-unstylied d-flex space-evenly col-12 py-1">
-                    <div><i class="fa-brands fa-facebook"></i></div>
-                    <div><i class="fa-brands fa-twitter"></i></div>
-                    <div><i class="fa-brands fa-instagram"></i></div>
-                    <div><i class="fa-brands fa-spotify"></i></div>
-                    <div><i class="fa-brands fa-youtube"></i></div>
-                </div>
+                <p class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores excepturi itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In distinctio labore odio nam, blanditiis officiis laborum totam hic eaque temporibus dolorum iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum quo maiores provident earum! Delectus illum expedita nemo ratione eaque tempore fugiat facilis dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet? Ipsam, corporis reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum excepturi.</p>
             </div>
         </div>
 
