--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
     <main class="font-style">
         <div class="container">
             <div class="row">
-                <h6 class="py-1 font-s1">DOLCI E DESSERTS</h6>
+                <h6 class="py-1 font-s1 color-grey">DOLCI E DESSERTS</h6>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-6 pb-1">Tiramisu'</div>
-                <div class="col-6 font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
-                        href="">RATE</a></div>
+                <div class="col-12 d-flex space-between width-100">
+                    <div class="col-6 pb-2 color-violet"><strong>Tiramisu'</strong></div>
+                    <div class="font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
+                            href="">RATE</a>
+                    </div>
+                </div>
+                <!-- Youtube -->
                 <div class="col-12"><iframe width="100%" height="150"
                         src="https://www.youtube.com/watch?v=JVT900H6s0g"></iframe></div>
-                <!-- Ricetta -->
+                <!-- Recipe -->
                 <div class="card col-12 pl-1">
                     <h4 class="py-1">In breve</h4>
                     <ul class="list-unstylied font-s2">
@@ -46,7 +50,7 @@
                         <li class="pb-2"><strong>Note:</strong> +2 ore di riposo in frigo</li>
                     </ul>
                 </div>
-                <div class="list-unstylied d-flex space-evenly col-12 py-1 pb-2">
+                <div class="list-unstylied d-flex space-between col-12 py-3">
                     <div><a href=""><i class="fa-brands fa-facebook btn-social"></i></a></div>
                     <div><a href=""><i class="fa-brands fa-twitter btn-social"></i></a></div>
                     <div><a href=""><i class="fa-brands fa-instagram btn-social"></i></a></div>
@@ -56,6 +60,7 @@
                 <div class="col-12">
                     <img class="d-none" src="./assets/img/banner.png" alt="">
                 </div>
+                <!-- Presentation  -->
                 <h2 class="pb-2">PRESENTATION</h2>
                 <div class="col-12 d-flex">
                     <div class="col-2 border-top"></div>
@@ -63,13 +68,33 @@
                         <img class="img py-2" src="./assets/img/tiramisu.jpg" alt="">
                     </div>
                 </div>
-                <p class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores excepturi itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In distinctio labore odio nam, blanditiis officiis laborum totam hic eaque temporibus dolorum iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum quo maiores provident earum! Delectus illum expedita nemo ratione eaque tempore fugiat facilis dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet? Ipsam, corporis reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum excepturi.</p>
+                <p class="col-12 line-h-1 pb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel
+                    laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores excepturi
+                    itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In distinctio
+                    labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus dolorum
+                    iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum quo maiores
+                    <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore fugiat facilis
+                    dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet? Ipsam, corporis
+                    reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum excepturi.
+                </p>
             </div>
         </div>
 
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer class="font-style">
+        <div class="container bg-violet width-100">
+            <h4 class="text-a-center py-1"><i class="fa-regular fa-copyright"></i> 2021 Giallo Booleano S.p.a.</h4>
+            <div class="text-a-center pb-2">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
+            <ul class="flex-wrap d-flex list-unstylied justify-content-center gap-1 container">
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Terms of use</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+                <li class="pb-2"><a href="#">Disclaimer</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
