add header media query 768px

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 d-flex space-between width-100">
-                    <div class="col-6 pb-2 color-violet"><strong>Tiramisu'</strong></div>
+                    <div class="col-6 pb-2 color-violet"><strong>Tiramisu' <span class="d-none d-inline-block-sm"> (Dolce Tradizonale)</span></strong></div>
                     <div class="font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
                             href="">RATE</a>
                     </div>
@@ -57,11 +57,12 @@
                     <div><a href=""><i class="fa-brands fa-spotify btn-social"></i></a></div>
                     <div><a href=""><i class="fa-brands fa-youtube btn-social"></i></a></div>
                 </div>
+                <!-- Banner -->
                 <div class="col-12">
-                    <img class="d-none" src="./assets/img/banner.png" alt="">
+                    <img class="d-none d-block-sm width-100 py-3" src="./assets/img/banner.png" alt="">
                 </div>
                 <!-- Presentation  -->
-                <h2 class="pb-2">PRESENTATION</h2>
+                <h2 class="py-3">PRESENTATION</h2>
                 <div class="col-12 d-flex">
                     <div class="col-2 border-top"></div>
                     <div class="col-10">
