update media query main 768px

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <!-- Youtube -->
-                <div class="col-12"><iframe width="100%" height="150"
+                <div class="col-12"><iframe width="100%" height="300"
                         src="https://www.youtube.com/watch?v=JVT900H6s0g"></iframe></div>
                 <!-- Recipe -->
                 <div class="card col-12 pl-1">
@@ -51,11 +51,11 @@
                     </ul>
                 </div>
                 <div class="list-unstylied d-flex space-between col-12 py-3">
-                    <div><a href=""><i class="fa-brands fa-facebook btn-social"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-twitter btn-social"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-instagram btn-social"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-spotify btn-social"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-youtube btn-social"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-facebook btn-socia btn-social-sm"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-twitter btn-social btn-social-sm"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-instagram btn-social btn-social-sm"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-spotify btn-social btn-social-sm"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-youtube btn-social btn-social-sm"></i></a></div>
                 </div>
                 <!-- Banner -->
                 <div class="col-12">
