--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                     </div>
                 </div>
                 <!-- Youtube -->
-                <div class="col-12"><iframe width="100%" height="300"
-                        src="https://www.youtube.com/watch?v=JVT900H6s0g"></iframe></div>
+                <div class="col-12"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img class="width-100" src="./assets/img/image (10).png" alt=""></a></div>
                 <!-- Recipe -->
                 <div class="card col-12 pl-1">
                     <h4 class="py-1">In breve</h4>
@@ -63,21 +62,25 @@
                 </div>
                 <!-- Presentation  -->
                 <h2 class="py-3">PRESENTATION</h2>
-                <div class="col-12 d-flex">
-                    <div class="col-2 border-top"></div>
+                <div class="col-12 d-flex flex-d-col-sm">
+                    <div class="col-2 border-top max-h-50">
+                    </div>
                     <div class="col-10">
-                        <img class="img py-2" src="./assets/img/tiramisu.jpg" alt="">
+                        <img class="img py-2 float-left-sm col-sm-6 pr-1-sm" src="./assets/img/tiramisu.jpg" alt="">
+                        <div class="col-12">
+                            <p class="line-h-1 pb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel
+                            laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores excepturi
+                            itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In distinctio
+                            labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus dolorum
+                            iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum quo maiores
+                            <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore fugiat facilis
+                            dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet? Ipsam, corporis
+                            reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum excepturi.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <p class="col-12 line-h-1 pb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel
-                    laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores excepturi
-                    itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In distinctio
-                    labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus dolorum
-                    iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum quo maiores
-                    <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore fugiat facilis
-                    dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet? Ipsam, corporis
-                    reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum excepturi.
-                </p>
+                
             </div>
         </div>
 
