--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     </div>
                 </div>
                 <!-- Youtube -->
-                <div class="col-12"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img class="width-100" src="./assets/img/image (10).png" alt=""></a></div>
+                <div class="col-12 col-md-8"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img class="width-100" src="./assets/img/image (10).png" alt=""></a></div>
                 <!-- Recipe -->
-                <div class="card col-12 pl-1">
+                <div class="card col-12 pl-1 col-md-4">
                     <h4 class="py-1">In breve</h4>
                     <ul class="list-unstylied font-s2">
                         <li>Difficolta': <Strong>Facile</Strong></li>
