--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <!-- Youtube -->
-                <div class="col-12 col-md-8"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img class="width-100" src="./assets/img/image (10).png" alt=""></a></div>
+                <div class="col-12 col-md-8"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img class="width-100 height100-md" src="./assets/img/image (10).png" alt=""></a></div>
                 <!-- Recipe -->
                 <div class="card col-12 pl-1 col-md-4">
                     <h4 class="py-1">In breve</h4>
@@ -50,11 +50,11 @@
                     </ul>
                 </div>
                 <div class="list-unstylied d-flex space-between col-12 py-3">
-                    <div><a href=""><i class="fa-brands fa-facebook btn-socia btn-social-sm"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-twitter btn-social btn-social-sm"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-instagram btn-social btn-social-sm"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-spotify btn-social btn-social-sm"></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-youtube btn-social btn-social-sm"></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-facebook btn-socia btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> FACEBOOK</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-twitter btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md "> TWITTER</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-instagram btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> INSTAGRAM</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-pinterest btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> PINTEREST</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-youtube btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> YOUTUBE</span></i></a></div>
                 </div>
                 <!-- Banner -->
                 <div class="col-12">
