update media query footer 992px

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 d-flex space-between width-100">
-                    <div class="col-6 pb-2 color-violet"><strong>Tiramisu' <span class="d-none d-inline-block-sm"> (Dolce Tradizonale)</span></strong></div>
+                    <div class="col-6 pb-2 color-violet"><strong>Tiramisu' <span class="d-none d-inline-block-sm">
+                                (Dolce Tradizonale)</span></strong></div>
                     <div class="font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
                             href="">RATE</a>
                     </div>
                 </div>
                 <!-- Youtube -->
-                <div class="col-12 col-md-8"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img class="width-100 height100-md" src="./assets/img/image (10).png" alt=""></a></div>
+                <div class="col-12 col-md-8"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img
+                            class="width-100 height100-md" src="./assets/img/image (10).png" alt=""></a></div>
                 <!-- Recipe -->
                 <div class="card col-12 pl-1 col-md-4">
                     <h4 class="py-1">In breve</h4>
@@ -50,11 +52,16 @@
                     </ul>
                 </div>
                 <div class="list-unstylied d-flex space-between col-12 py-3">
-                    <div><a href=""><i class="fa-brands fa-facebook btn-socia btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> FACEBOOK</span></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-twitter btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md "> TWITTER</span></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-instagram btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> INSTAGRAM</span></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-pinterest btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> PINTEREST</span></i></a></div>
-                    <div><a href=""><i class="fa-brands fa-youtube btn-social btn-social-sm btn-social-md"><span class="d-none d-inline-block-md"> YOUTUBE</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-facebook btn-socia btn-social-sm btn-social-md"><span
+                                    class="d-none d-inline-block-md"> FACEBOOK</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-twitter btn-social btn-social-sm btn-social-md"><span
+                                    class="d-none d-inline-block-md "> TWITTER</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-instagram btn-social btn-social-sm btn-social-md"><span
+                                    class="d-none d-inline-block-md"> INSTAGRAM</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-pinterest btn-social btn-social-sm btn-social-md"><span
+                                    class="d-none d-inline-block-md"> PINTEREST</span></i></a></div>
+                    <div><a href=""><i class="fa-brands fa-youtube btn-social btn-social-sm btn-social-md"><span
+                                    class="d-none d-inline-block-md"> YOUTUBE</span></i></a></div>
                 </div>
                 <!-- Banner -->
                 <div class="col-12">
@@ -69,18 +76,25 @@
                         <img class="img py-2 float-left-sm col-sm-6 pr-1-sm" src="./assets/img/tiramisu.jpg" alt="">
                         <div class="col-12">
                             <p class="line-h-1 pb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel
-                            laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores excepturi
-                            itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In distinctio
-                            labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus dolorum
-                            iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum quo maiores
-                            <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore fugiat facilis
-                            dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet? Ipsam, corporis
-                            reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum excepturi.
+                                laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores
+                                excepturi
+                                itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In
+                                distinctio
+                                labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus
+                                dolorum
+                                iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum
+                                quo maiores
+                                <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore
+                                fugiat facilis
+                                dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet?
+                                Ipsam, corporis
+                                reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum
+                                excepturi.
                             </p>
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
@@ -88,15 +102,17 @@
     <!-- footer -->
     <footer class="font-style">
         <div class="container bg-violet width-100">
-            <h4 class="text-a-center py-1"><i class="fa-regular fa-copyright"></i> 2021 Giallo Booleano S.p.a.</h4>
-            <div class="text-a-center pb-2">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
-            <ul class="flex-wrap d-flex list-unstylied justify-content-center gap-1 container">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Terms of use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Cookie Policy</a></li>
-                <li class="pb-2"><a href="#">Disclaimer</a></li>
-            </ul>
+            <div class="row">
+                <h4 class="text-a-center col-12 py-1 d-inline-block-md col-md-8 text-align-left-md"><i class="fa-regular fa-copyright"></i> 2021 Giallo Booleano S.p.a.</h4>
+                <div class="text-a-center col-12 pb-2 d-block-md col-md-8 text-align-left-md order2">Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</div>
+                <ul class="flex-wrap d-flex list-unstylied justify-content-center gap-1 container col-md-11 order1 justify-content-end">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Terms of use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li class="pb-2"><a href="#">Disclaimer</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
