--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="">
     <!-- header -->
-    <header>
+    <header class="d-flex">
         <div>
             <h1>GIALLO BOOLEANO</h1>
         </div>
@@ -31,9 +31,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 d-flex space-between width-100">
-                    <div class="col-6 pb-2 color-violet"><strong>Tiramisu' <span class="d-none d-inline-block-sm">
+                    <div class="col-6 pb-2 color-violet font-size-md-35"><strong>Tiramisu' <span class="d-none d-inline-block-sm">
                                 (Dolce Tradizonale)</span></strong></div>
-                    <div class="font-s2"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
+                    <div class="font-s2 font-size-md-30"><i class="fa-solid fa-star"></i><strong>4.6</strong>/5 <a class="btn"
                             href="">RATE</a>
                     </div>
                 </div>
