fix youtube's link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="font-style">
         <div class="container">
             <div class="row">
-                <h6 class="py-1 font-s1 color-grey">DOLCI E DESSERTS</h6>
+                <h6 class="py-1 font-s1 color-grey font-size-md-15">DOLCI E DESSERTS</h6>
             </div>
         </div>
         <div class="container">
@@ -38,12 +38,12 @@
                     </div>
                 </div>
                 <!-- Youtube -->
-                <div class="col-12 col-md-8"><a src="https://www.youtube.com/watch?v=JVT900H6s0g"><img
+                <div class="col-12 col-md-8"><a href="https://www.youtube.com/watch?v=JVT900H6s0g" target="_blank"><img
                             class="width-100 height100-md" src="./assets/img/image (10).png" alt=""></a></div>
                 <!-- Recipe -->
                 <div class="card col-12 pl-1 col-md-4">
                     <h4 class="py-1">In breve</h4>
-                    <ul class="list-unstylied font-s2">
+                    <ul class="list-unstylied font-s2 font-size-md-15">
                         <li>Difficolta': <Strong>Facile</Strong></li>
                         <li>Tempo: <strong>40 min</strong></li>
                         <li>Porzione per: <strong>8 persone</strong></li>
