update container media query 992px

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </header>
     <!-- main -->
     <main class="font-style">
-        <div class="container">
+        <div class="container container-md-xs">
             <div class="row">
                 <h6 class="py-1 font-s1 color-grey font-size-md-15">DOLCI E DESSERTS</h6>
             </div>
         </div>
-        <div class="container">
+        <div class="container container-md-xs">
             <div class="row">
                 <div class="col-12 d-flex space-between width-100">
                     <div class="col-6 pb-2 color-violet font-size-md-35"><strong>Tiramisu' <span class="d-none d-inline-block-sm">
@@ -68,33 +68,33 @@
                     <img class="d-none d-block-sm width-100 py-3" src="./assets/img/banner.png" alt="">
                 </div>
                 <!-- Presentation  -->
-                <h2 class="py-3">PRESENTATION</h2>
-                <div class="col-12 d-flex flex-d-col-sm">
-                    <div class="col-2 border-top max-h-50">
-                    </div>
-                    <div class="col-10">
-                        <img class="img py-2 float-left-sm col-sm-6 pr-1-sm" src="./assets/img/tiramisu.jpg" alt="">
-                        <div class="col-12">
-                            <p class="line-h-1 pb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel
-                                laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores
-                                excepturi
-                                itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In
-                                distinctio
-                                labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus
-                                dolorum
-                                iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum
-                                quo maiores
-                                <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore
-                                fugiat facilis
-                                dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet?
-                                Ipsam, corporis
-                                reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum
-                                excepturi.
-                            </p>
+                 
+                    <h2 class="py-3">PRESENTATION</h2>
+                    <div class="col-12 d-flex flex-d-col-sm">
+                        <div class="col-2 border-top max-h-50">
                         </div>
-                    </div>
-                </div>
-
+                        <div class="col-10">
+                            <img class="img py-2 float-left-sm col-sm-6 pr-1-sm" src="./assets/img/tiramisu.jpg" alt="">
+                            <div class="col-12">
+                                <p class="line-h-1 pb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo vel
+                                    laudantium velit, soluta doloribus, numquam sint sit impedit quae hic, fugit dolores
+                                    excepturi
+                                    itaque ea. Soluta facere doloribus fugiat rerum laudantium minima ipsam ducimus! In
+                                    distinctio
+                                    labore odio nam, <strong>blanditiis officiis laborum</strong> totam hic eaque temporibus
+                                    dolorum
+                                    iste placeat vero cumque architecto cupiditate itaque suscipit cum repellat delectus eum
+                                    quo maiores
+                                    <strong>provident earum!</strong> Delectus illum expedita nemo ratione eaque tempore
+                                    fugiat facilis
+                                    dolorem placeat at minus sunt tenetur non dicta cum omnis est, aliquam quo eveniet?
+                                    Ipsam, corporis
+                                    reiciendis officia quasi laborum cupiditate. Architecto, cum ex! Expedita vel voluptatum
+                                    excepturi.
+                                </p>
+                            </div>
+                        </div>
+                    </div>  
             </div>
         </div>
 
